[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["full"] }
regex = "1.10.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
jsonrpsee = { version = "0.22.5", features = [
    "server",
    "http-client",
    "ws-client",
    "macros",
    "client-ws-transport-native-tls",
] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
serde_json = { version = "1" }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
anyhow = "1.0.86"
