[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.5", features = ["full"] }
jsonrpsee = { version = "0.22.5", features = ["server", "http-client", "client-core", "ws-client", "macros", "client-ws-transport-native-tls"] }
regex = "1.10.4"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
